<resources>
    <string name="app_name">micro-volunteering</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_full_name">Введите ФИО</string>
    <string name="password_short">Пароль слишком короткий</string>
    <string name="email_organization">Email организации</string>
    <string name="incorrect_phone_number">Некорректный номер телефона</string>
    <string name="incorrect_age">Возраст должен быть 14+</string>
    <string name="enter_city">Укажите город</string>
    <string name="enter_legal_name">Введите юр. наименование</string>
    <string name="incorrect_INN">Некорректный ИНН</string>
    <string name="enter_registration_address">Введите адрес регистрации</string>
    <string name="enter_public_name">Введите публичное название</string>
    <string name="enter_phone_number">Укажите телефон менеджера</string>
    <string name="incorrect_email_address">Некорректный Email</string>
    <string name="error_no_internet">Проверьте подключение к интернету</string>
    <string name="error_server_message">Ошибка сервера: %d</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_code">Код ошибки: %d</string>
    <string name="error_session_expired">Сессия истекла. Пожалуйста, войдите снова</string>
    <string name="tasks">Задачи</string>
    <string name="notification">Уведомления</string>
    <string name="participants">Участники</string>
    <string name="account">Аккаунт</string>
    <string name="volunteer">Я Волонтер</string>
    <string name="organization">Мы Организация</string>
    <string name="account_verified">"Аккаунт верифицирован"</string>
    <string name="account_not_verified">"Аккаунт не верифицирован. Загрузите свидетельство о регистрации (ОГРН)"</string>
    <string name="upload_document">"Загрузить документы для верификации"</string>
    <string name="authorization">Авторизация</string>
    <string name="enter_email">Введите почту</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="name">Название</string>
    <string name="name_profile">Название: %s</string>
    <string name="description">Описание</string>
    <string name="address">Адрес</string>
    <string name="address_profile">Адрес: %s</string>
    <string name="category">Категория</string>
    <string name="number_volunteers">Количество волонтеров: %s</string>
    <string name="number_volunteers_edit">Количество волонтеров</string>
    <string name="create">Создать</string>
    <string name="registration">Регистрация</string>
    <string name="FCs">ФИО</string>
    <string name="age">Возраст</string>
    <string name="age_profile">Возраст: %s</string>
    <string name="email_address">Email</string>
    <string name="legal_name">Юридическое наименование (ООО/АО)</string>
    <string name="inn">ИНН</string>
    <string name="inn_profile">ИНН: %s</string>
    <string name="registration_address">Адрес регистрации</string>
    <string name="name_organization">Название организации</string>
    <string name="name_organization_profile">Название организации: %s</string>
    <string name="manager_phone">Телефон менеджера</string>
    <string name="manager_phone_profile">Телефон менеджера: %s</string>
    <string name="number">Телефон</string>
    <string name="number_org">Телефон организации</string>
    <string name="number_profile">Телефон: %s</string>
    <string name="city">Город</string>
    <string name="city_profile">Город: %s</string>
    <string name="have_account">Уже есть аккаунт? Войти</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="view_participants">Посмотреть участников</string>
    <string name="complete">Завершить</string>
    <string name="respond_task">Откликнуться</string>
    <string name="create_task">Создание задачи</string>
    <string name="task">Задачи</string>
    <string name="organization_not_verified">Организации без верификации</string>
    <string name="feedback">Отзывы</string>
    <string name="plus">+</string>
    <string name="save">Сохранить</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="mail">Почта: %s</string>
    <string name="email">Почта</string>
    <string name="edit">Редактировать</string>
    <string name="phone_organization">Телефон организации: %s</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="error_empty_title">Введите название задачи</string>
    <string name="error_empty_description">Введите описание задачи</string>
    <string name="error_short_description">Описание слишком короткое</string>
    <string name="error_empty_address">Укажите адрес</string>
    <string name="error_empty_category">Укажите категорию</string>
    <string name="error_invalid_volunteers">Укажите количество волонтеров (минимум 1)</string>
    <string name="count_task">Количество выполненных задач: %s</string>
    <string name="reviews">(%s отзывов)</string>
    <string name="error_no_rating">Пожалуйста, поставьте оценку</string>
    <string name="error_empty_feedback">Напишите текст отзыва</string>
    <string name="error_short_feedback">Отзыв слишком короткий</string>
    <string name="send">Отправить</string>
    <string name="accept">Принять</string>
    <string name="dismiss">Отклонить</string>
    <string name="could_not_open_notification">Не удалось открыть экран уведомлений</string>
    <string name="successfully_responded">Вы успешно откликнулись на задачу!</string>
    <string name="accepted_user">Вы успешно приняли пользователя на задачу!</string>
    <string name="dismiss_user">Вы успешно отклонили пользователя на задачу!</string>
    <string name="active_task">Активные задачи</string>
    <string name="complete_task">Завершенные задачи</string>
    <string name="ecology">Экология</string>
    <string name="animal">Животные</string>
    <string name="social_assist">Социальная помощь</string>
    <string name="car">Автоволонтерство</string>
    <string name="mental">Интеллектуальная помощь</string>
    <string name="event">Мероприятия</string>
    <string name="other">Другое</string>
    <string name="all_categories">Все категории</string>
    <string name="text_verified">Ваш аккаунт не верифицирован. Загрузите документы в Профиле</string>
    <string name="verified">Верифицировать</string>
    <string name="not_verified">Отклонить</string>
    <string name="delete_account_message">Вы уверены, что хотите удалить аккаунт?</string>
    <string name="delete_account_title">Удаление аккаунта</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="input_code">Введите код, который был отправлен вам на почту</string>
    <string name="error_input_code">Введите код полностью</string>
    <string name="repeat_code">Отправить код повторно</string>
    <string name="resend_timer">Отправить повторно через %d </string>
    <string name="resend_button">Отправить код повторно</string>
</resources>