<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.UserInfoFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_add_img"
                android:layout_width="64dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:text="@string/plus" />

            <LinearLayout
                android:id="@+id/content_volunteer_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/FCs"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/count_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:numStars="5"
                    android:isIndicator="true"
                    android:progressTint="#FFC107"
                    android:secondaryProgressTint="#FFC107"/>

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textColor="#808080"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_organization_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/legal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/name_organization"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/inn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"
                    android:text="@string/inn"/>

                <TextView
                    android:id="@+id/mail_org"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"
                    android:text="@string/mail"/>

                <TextView
                    android:id="@+id/city_org"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"
                    android:text="@string/city"/>

                <TextView
                    android:id="@+id/legal_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"
                    android:text="@string/address"/>

                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/manager_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"
                    android:text="@string/manager_phone"/>

                <TextView
                    android:id="@+id/phone_org"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"
                    android:text="@string/phone_organization"/>

                <TextView
                    android:id="@+id/is_verified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="18sp"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/logout" />

            <Button
                android:id="@+id/btn_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/edit" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>